Pass HL7 file paths to python activity through scratch space temp files